--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 
                 <div class="cta-section">
                     <p>Para cálculos más precisos y datos históricos completos, visita la</p>
-                    <a href="https://calculadorade-inflacion.com/" target="_blank" rel="dofollow" class="main-cta">
+                    <a href="https://calculadorade-inflacion.com/index.html" target="_blank" rel="dofollow" class="main-cta">
                         📊 Calculadora de Inflación Argentina Oficial
                     </a>
                 </div>
@@ -206,7 +206,7 @@
                     </ul>
 
                     <h2>📲 Acceso móvil y funcionalidades</h2>
-                    <p>Podés instalar la <a href="https://calculadorade-inflacion.com/" target="_blank" rel="dofollow"><strong>calculadora de inflación argentina</strong></a> como una app en tu celular Android o iOS, para tener acceso directo a los cálculos. También podés cambiar la fuente de ajuste de precios entre IPC, dólar oficial o dólar libre.</p>
+                    <p>Podés instalar la <a href="https://calculadorade-inflacion.com/index.html" target="_blank" rel="dofollow"><strong>calculadora de inflación argentina</strong></a> como una app en tu celular Android o iOS, para tener acceso directo a los cálculos. También podés cambiar la fuente de ajuste de precios entre IPC, dólar oficial o dólar libre.</p>
 
                     <div class="features-grid">
                         <div class="feature-card">
@@ -242,7 +242,7 @@
                     <div class="cta-final">
                         <h3>🚀 Calcula tu inflación ahora</h3>
                         <p>Utiliza la herramienta oficial más completa de Argentina para tus cálculos de inflación:</p>
-                        <a href="https://calculadorade-inflacion.com/" target="_blank" rel="dofollow" class="final-cta">
+                        <a href="https://calculadorade-inflacion.com/index.html" target="_blank" rel="dofollow" class="final-cta">
                             Ir a Calculadora de Inflación Argentina →
                         </a>
                     </div>
@@ -279,11 +279,12 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 Calculadora de Inflación Argentina. Datos basados en fuentes oficiales del INDEC y BCRA.</p>
-            <p>Para cálculos oficiales, visita: <a href="https://calculadorade-inflacion.com/" target="_blank" rel="dofollow">calculadoradeinflacion.com</a></p>
+            <p>&copy; 2025 Calculadora de Inflación Argentina.   Datos basados en fuentes oficiales del INDEC y BCRA.</p>
+            <p>Para cálculos oficiales, visita: <a href="https://calculadorade-inflacion.com/index.html" target="_blank" rel="dofollow">calculadoradeinflacion.com</a></p>
         </div>
     </footer>
 
     <script src="script.js"></script>
 </body>
 </html>
+
