--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     </div>
                     <div class="author-info">
                         <h3>Auther </h3>
-                        <p class="author-title">Economista y Analista Financiero</p>
+                        <p class="author-title">ASM Company</p>
                         <p class="author-bio">Especialista en análisis macroeconómico argentino con más de 10 años de experiencia en el estudio de la inflación y política monetaria. Magister en Economía por la UBA y colaborador regular en medios especializados.</p>
                         <div class="author-credentials">
                             <span class="credential">📚 Magister en Economía - UBA</span>
@@ -287,4 +287,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
